fix overflow text

--- a/public/components/Footer/Footer.scss
+++ b/public/components/Footer/Footer.scss
@@ -43,6 +43,11 @@
 
         color: #666666;
       }
+
+      &__address {
+        max-width: 30vh;
+        @include overflow-text-width;
+      }
     }
   }
 
